--- a/index.html
+++ b/index.html
@@ -54,31 +54,31 @@
                 <img  class="grid-image" src="/images/img1_small.png" alt="">
             </div>
             <div class="item2">
-                <img  class="grid-image" src="/images/img2_small.png" alt="">
+                <img  class="grid-image" src="images/img2_small.png" alt="">
             </div>
             <div class="item3">
-                <img class="grid-image" src="/images/img3_small.png" alt="">
+                <img class="grid-image" src="images/img3_small.png" alt="">
             </div>
             <div class="item4">
-                <img class="grid-image" src="/images/img4_small.png" alt="">
+                <img class="grid-image" src="images/img4_small.png" alt="">
             </div>
             <div class="item5">
-                <img class="grid-image" src="/images/img5_small.png" alt="">
+                <img class="grid-image" src="images/img5_small.png" alt="">
             </div>
             <div class="item6">
-                <img class="grid-image" src="/images/img6_small.png" alt="">
+                <img class="grid-image" src="images/img6_small.png" alt="">
             </div>
             <div class="item7">
-                <img class="grid-image" src="/images/img7_small.png" alt="">
+                <img class="grid-image" src="images/img7_small.png" alt="">
             </div>
             <div class="item8">
-                <img class="grid-image" src="/images/img8_small.png" alt="">
+                <img class="grid-image" src="images/img8_small.png" alt="">
             </div>
             <div class="item9">
-                <img class="grid-image" src="/images/img9_small.png" alt="">
+                <img class="grid-image" src="images/img9_small.png" alt="">
             </div>
             <div class="item10">
-                <img class="grid-image" src="/images/img10_small.png" alt="">
+                <img class="grid-image" src="images/img10_small.png" alt="">
             </div>
         </div>
        
