Update index.html images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section id="Photography">
         <div class="grid">
             <div class="item1">
-                <img  class="grid-image" src="/images/img1_small.png" alt="">
+                <img  class="grid-image" src="images/img1_small.png" alt="">
             </div>
             <div class="item2">
                 <img  class="grid-image" src="images/img2_small.png" alt="">
